<resources>
    <string name="app_name">iOrder</string>

    <!-- Log In/Sign Up strings -->
    <string name="email_prompt">Email</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="log_in_button_text">LOG IN</string>
    <string name="password_prompt">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_eid">Employee ID</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="signin_toolbar_text">Log In/Sign Up</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_link_text">No account? Sign up here</string>
    <string name="pw_do_not_match_text">Passwords does not match</string>

    <!--Drawer constants-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Upload food strings -->
    <string name="price_prompt">Price</string>
    <string name="desc_prompt">Description</string>
    <string name="image_prompt">Image</string>
    <string name="upload_food_text">Upload</string>

    <!--Customer drawer menu-->
    <string name="shop_now">Shop now</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="orders">Orders</string>
    <string name="history_orders">History</string>
    <string name="details">Change password</string>

    <!--Customer cards-->
    <string name="add_to_cart">Add to cart</string>

    <!--Order Fragment-->
    <string name="total_amount">Total Amount:</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="place_to_deliver">Notes:</string>

    <!--Seller drawer menu-->
    <string name="food_gallery">Food Gallery</string>
    <string name="print_history">Print History</string>
    <string name="_0_00">0.00</string>

    <!--Checkout-->
    <string name="place_order">Place Order</string>
    <string name="place">Place,cash</string>
    <string name="cash_payment">Notes: </string>
    <string name="items">Item(s)</string>

    <!--Delete item from cart dialog-->
    <string name="delete_message">Delete item?</string>
    <string name="positive">Delete</string>
    <string name="negative">Cancel</string>

    <!--Place order dialog-->
    <string name="title">Place your order?</string>
    <string name="messsage">Once order is placed, it can\'t be cancelled.</string>
    <string name="popositive">Proceed</string>
    <string name="ponegative">Cancel</string>

    <!--Sign up dialog-->
    <string name="sutitle">Sign up?</string>
    <string name="sumessage">Check details. Incorrect detail will immediately null sign up</string>

    <!--Order Detail-->
    <string name="order_date">Order Date</string>
    <string name="order_id">Order ID</string>
    <string name="delivery_place">Notes</string>
    <string name="total_price">Total Price</string>
    <string name="store">Store</string>
    <string name="string">Status</string>

    <!--Seller order details-->
    <string name="confirm">Confirm</string>

    <!--Card new seller food item-->
    <string name="update">Update</string>
    <string name="available">Availability</string>
    <string name="unavailable">Unavailable</string>
    <string name="delete">Delete</string>

</resources>