<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shop_now"
            android:icon="@drawable/ic_shop_black_24dp"
            android:title= "@string/shop_now"/>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/cart" />
        <item android:title="@string/orders"
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_view_list_black_24dp" />
        <item android:title="@string/history_orders"
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_timeline_black_24dp" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
