<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_check_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.brensurio.iorder.activities.CheckOutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/linearLayout4">

        <TextView
            android:text="@string/items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:layout_margin="16dp" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.59"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentStart="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_weight="1"
            android:hint="@string/place" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_weight="1"
            android:hint="@string/cash_payment" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="8dp"
            android:background="@android:color/white"
            android:rowCount="2">

            <TextView
                android:text="@string/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_row="1"
                android:layout_column="0"
                android:textSize="12sp" />

            <TextView
                android:text="@string/_0_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/amount_text_view"
                android:layout_row="1"
                android:layout_column="1"
                android:textSize="18sp"
                android:layout_gravity="right"
                android:textColor="@android:color/black" />

        </GridLayout>

        <Button
            android:text="@string/place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
