<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.app.brensurio.iorder.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_text_input_layout"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_prompt"
                    android:id="@+id/email_edit_text"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:imeOptions="actionNext" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_text_input_layout"
                android:layout_marginTop="7dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password_prompt"
                    android:id="@+id/password_edit_text"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionDone" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/log_in_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in_button"
                android:layout_weight="1" />

            <TextView
                android:text="@string/sign_up_link_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_link_text_view"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>