<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.app.brensurio.iorder.fragments.CartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/customer_food_recycler"
            android:layout_above="@+id/gridLayout"
            android:layout_weight="1"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_gravity="bottom"
            android:layout_above="@+id/place_order_button"
            android:layout_alignParentStart="true"
            android:padding="8dp"
            android:background="@android:color/white"
            android:rowCount="2">

            <TextView
                android:text="@string/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_row="1"
                android:layout_column="0"
                android:textSize="12sp" />

            <TextView
                android:text="@string/_0_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/amount_text_view"
                android:layout_row="1"
                android:layout_column="1"
                android:textSize="18sp"
                android:layout_gravity="right"
                android:textColor="@android:color/black" />

        </GridLayout>

        <Button
            android:text="@string/proceed_to_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/place_order_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_gravity="bottom" />

    </LinearLayout>

</FrameLayout>
